@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-02T08:16:46Z",
+  "timestamp" : "2024-03-03T01:07:53Z",
   "count_outdated" : 1599,
   "uniques_outdated" : 875,
-  "count" : 1622,
-  "uniques" : 888,
+  "count" : 1624,
+  "uniques" : 889,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2024-03-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
