@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 2,
+  "count": 25,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2024-03-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
